--- a/hello-amp/index.html
+++ b/hello-amp/index.html
@@ -21,5 +21,6 @@
   </head>
   <body>
     <h1>Welcome to the mobile web</h1>
+    <amp-img src="hello-amp.jpg" alt="hello" height="720" width="1280" layout="responsive"></amp-img>
   </body>
 </html>
